# feng

./: .gitattributes  .gitignore  AGENT.md  README.md  ROS2_REALTIME_RUNBOOK.md  docker-compose.yml  mvnw  mvnw.cmd  pom.xml
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  styles.css  types.ts
frontend/src/components/: ConnectionStatus.tsx  Metric.tsx  RobotDetailDrawer.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/views/: AlertCenterView.tsx  DashboardView.tsx  DigitalTwinView.tsx  RobotListView.tsx  SystemView.tsx
rms-backend-api/: pom.xml
rms-backend-api/src/main/resources/: application.yml
rms-backend-api/src/test/resources/: application.yml
rms-common/: pom.xml
rms-flink-job/: pom.xml
ros2/rms_bridge_node/: package.xml  setup.cfg  setup.py
ros2/rms_bridge_node/rms_bridge_node/: bridge_node.py  telemetry.py
ros2/rms_bridge_node/test/: test_telemetry.py
ros2/rms_warehouse_sim/: package.xml  setup.cfg  setup.py
ros2/rms_warehouse_sim/launch/: rms_warehouse_5robots.launch.py
ros2/rms_warehouse_sim/models/rms_agv/: model.config  model.sdf
ros2/rms_warehouse_sim/rms_warehouse_sim/: patrol_logic.py  patrol_node.py
ros2/rms_warehouse_sim/test/: test_patrol_logic.py
ros2/rms_warehouse_sim/worlds/: rms_smart_warehouse.world
scripts/: clear-ros-state.ps1  reset-ros2-data.ps1  run-api-tests.ps1  start-api.ps1  start-frontend.ps1  submit-ros2-flink-job.ps1  verify-api.ps1  verify-stream.ps1
(+43 files in other folders)
