<?xml version="1.0"?>
<package format="3">
  <name>rms_warehouse_sim</name>
  <version>0.1.0</version>
  <description>Smart warehouse Gazebo Sim assets for RMS.</description>
  <maintainer email="robot@example.com">Robot RMS</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
